grammar.txt
program = func*;

func = func_name "(" (arg ("," arg)*)? ")" "{" stmt* "}"

stmt =    expr ";"
        | "int" [VAR_NAME] ("[" num "]")? ";"
        | "{" stmt* "}"
        | "return" expr ";"
        | "if" "(" expr ")" stmt ("else" stmt)?
        | "while" "(" expr ")" stmt
        | "for" "(" expr? ";" expr? ";" expr? ")" stmt

expr = assign

assign = equality ("=" assign)?

equality = relational ("==" relational | "!=" relational)*

relational = add ("<" add | "<=" add | ">" add | ">=" add)*

add = mul ("+" mul | "-" mul)

mul = unary ("*" unary | "/" unary)*

unary = ("+" | "-")? primary | ("&" | "*" | "sizeof") unary

primary =  num
        | ident ("(" (assign ("," assign)*)? ")")? index_access*
        | "(" expr ")" index_access*

index_access = ("[" expr "]")*
